[gd_scene load_steps=6 format=3 uid="uid://bm0xtp5kknpig"]

[ext_resource type="Script" path="res://Main.gd" id="1_iu3xl"]
[ext_resource type="PackedScene" uid="uid://cmnob5au0h6p5" path="res://level0.tscn" id="2_0kcwx"]
[ext_resource type="PackedScene" uid="uid://d3rwubp3v84g0" path="res://InventoryGui.tscn" id="4_l3yr5"]
[ext_resource type="PackedScene" uid="uid://bf0t5wyx65krj" path="res://PauseGui.tscn" id="5_68p0f"]
[ext_resource type="Script" path="res://UI.gd" id="7_llngi"]

[node name="Main" type="Node"]
script = ExtResource("1_iu3xl")

[node name="Level0" parent="." instance=ExtResource("2_0kcwx")]

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("7_llngi")

[node name="PauseGui" parent="UI" instance=ExtResource("5_68p0f")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -346.5
offset_top = -518.0
offset_right = 346.5
offset_bottom = 518.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryGui" parent="UI" instance=ExtResource("4_l3yr5")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -660.0
offset_top = -403.0
offset_right = 660.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="closed" from="UI/PauseGui" to="." method="_on_pause_gui_closed"]
[connection signal="opened" from="UI/PauseGui" to="." method="_on_pause_gui_opened"]
[connection signal="closed" from="UI/InventoryGui" to="." method="_on_inventory_gui_closed"]
[connection signal="opened" from="UI/InventoryGui" to="." method="_on_inventory_gui_opened"]
